# airtable.py

./: .gitignore  .travis.yml  README.md  README.rst  airtable.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_airtable.py
airtable/: __init__.py  __init__.pyi  airtable.py  airtable.pyi  airtable_test.py
typetests/: example.py
