[metadata]
author = Joseph Best-James, Nicolo Canali De Rossi, Pascal Corpet
name = airtable
summary = Python client library for AirTable
license = The MIT License (MIT)
home-page = https://github.com/josephbestjames/airtable.py
description-file = README.rst
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    airtable
    api

[files]
packages = airtable
package-data = airtable = py.typed, *.pyi

[bdist_wheel]
universal = True

[flake8]
max-line-length = 100
